# alpha60-medium-info

./: CMakeLists.txt  INSTALL.sh  _config.yml  build-command.sh  diagnose-link-issues.sh  index.md  project-structure-tree.txt  run-pipeline.sh
_layouts/: default.html
data/: spider-noir-01-medium-info.json
docs/: api_specifications.md  architecture_overview.md  btiha-array-element-serialization-example.json  pipeline_diagram.md
scripts/: build-command-custom-libtorrent.sh  libtorrent-check.sh  run_enrichment.sh  run_enrinchment.sh  test-dl-bytes.sh  test-libtorret-dl-files.sh  test-ubuntu.sh  test_connectivity.sh  testaria.sh  testcon2.cc  testconn.sh
src/: json_enricher.cpp  json_enricher.hpp  main.cpp  mediainfo_extractor.cpp  mediainfo_extractor.hpp  torrent_downloader.cpp  torrent_downloader.hpp  torrent_parser.cpp  torrent_parser.hpp
